# linguistic_parser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
linguistic_parser/: main.cpp  parser.cpp  parser.h  word_stats.cpp  word_stats.h
linguistic_parser.xcodeproj/: project.pbxproj
linguistic_parser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
linguistic_parser.xcodeproj/project.xcworkspace/xcshareddata/: linguistic_parser.xcscmblueprint
linguistic_parser.xcodeproj/xcuserdata/chrispauley.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
linguistic_parser.xcodeproj/xcuserdata/chrispauley.xcuserdatad/xcschemes/: linguistic_parser.xcscheme  xcschememanagement.plist
server/: CivetServer.cpp  CivetServer.h  authenticate.cpp  authenticate.h  bitcoin.cpp  bitcoin.h  channels.cpp  channels.h  crypto.cpp  crypto.h  email.cpp  email.h  http_base.cpp  http_base.h  location.cpp  location.h  notifications.cpp  notifications.h  request.cpp  request.h  response.cpp  response.h  routes.h  sha512.cpp  sms.cpp  sms.h  string_utils.cpp  string_utils.h  websocket_base.cpp  websocket_base.h
server/certificate/: server.crt  server.csr  server.key  server.key.org
